# constraint-plugin

./: CMakeLists.txt  CTestTestfile.cmake  README.md  cmake_install.cmake
openmmapi/include/: OpenMMGroupConstraint.h
openmmapi/include/openmm/: GroupConstraintForce.h  GroupConstraintKernels.h
openmmapi/include/openmm/internal/: GroupConstraintForceImpl.h
openmmapi/src/: GroupConstraintForce.cpp  GroupConstraintForceImpl.cpp
serialization/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
