#---------------------------------------------------
# OpenMM GroupConstraint Plugin
#
# Creates OpenMM GroupConstraint plugin library, base name=OpenMMGroupConstraint.
# Default libraries are shared & optimized. Variants
# are created for static (_static) and debug (_d).
#
# Windows:
#   OpenMMGroupConstraint[_d].dll
#   OpenMMGroupConstraint[_d].lib
#   OpenMMGroupConstraint_static[_d].lib
# Unix:
#   libOpenMMGroupConstraint[_d].so
#   libOpenMMGroupConstraint_static[_d].a
#----------------------------------------------------

#INCLUDE(Dart)

# The source is organized into subdirectories, but we handle them all from
# this CMakeLists file rather than letting CMake visit them as SUBDIRS.
SET(OPENMM_GROUPCONSTRAINT_PLUGIN_SOURCE_SUBDIRS . openmmapi serialization)

SET(OPENMM_GROUPCONSTRAINT_LIBRARY_NAME OpenMMGroupConstraint)
SET(SHARED_GROUPCONSTRAINT_TARGET ${OPENMM_GROUPCONSTRAINT_LIBRARY_NAME})
SET(STATIC_GROUPCONSTRAINT_TARGET ${OPENMM_GROUPCONSTRAINT_LIBRARY_NAME}_static)

# But on Unix or Cygwin we have to add the suffix manually
IF (UNIX AND CMAKE_BUILD_TYPE MATCHES Debug)
    SET(SHARED_GROUPCONSTRAINT_TARGET ${SHARED_GROUPCONSTRAINT_TARGET}_d)
    SET(STATIC_GROUPCONSTRAINT_TARGET ${STATIC_GROUPCONSTRAINT_TARGET}_d)
ENDIF (UNIX AND CMAKE_BUILD_TYPE MATCHES Debug)

# These are all the places to search for header files which are
# to be part of the API.
SET(API_GROUPCONSTRAINT_INCLUDE_DIRS) # start empty
FOREACH(subdir ${OPENMM_GROUPCONSTRAINT_PLUGIN_SOURCE_SUBDIRS})
    # append
    SET(API_GROUPCONSTRAINT_INCLUDE_DIRS ${API_GROUPCONSTRAINT_INCLUDE_DIRS}
                                     ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/include
                                     ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/include/internal)
ENDFOREACH(subdir)

# We'll need both *relative* path names, starting with their API_INCLUDE_DIRS,
# and absolute pathnames.
SET(API_GROUPCONSTRAINT_REL_INCLUDE_FILES)   # start these out empty
SET(API_GROUPCONSTRAINT_ABS_INCLUDE_FILES)

FOREACH(dir ${API_GROUPCONSTRAINT_INCLUDE_DIRS})
    FILE(GLOB fullpaths ${dir}/*.h)	# returns full pathnames
    SET(API_GROUPCONSTRAINT_ABS_INCLUDE_FILES ${API_GROUPCONSTRAINT_ABS_INCLUDE_FILES} ${fullpaths})

    FOREACH(pathname ${fullpaths})
        GET_FILENAME_COMPONENT(filename ${pathname} NAME)
        SET(API_GROUPCONSTRAINT_REL_INCLUDE_FILES ${API_GROUPCONSTRAINT_REL_INCLUDE_FILES} ${dir}/${filename})
    ENDFOREACH(pathname)
ENDFOREACH(dir)

# collect up source files
SET(SOURCE_GROUPCONSTRAINT_FILES) # empty
SET(SOURCE_GROUPCONSTRAINT_INCLUDE_FILES)

FOREACH(subdir ${OPENMM_GROUPCONSTRAINT_PLUGIN_SOURCE_SUBDIRS})
    FILE(GLOB src_files  ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/src/*/*.cpp)
    FILE(GLOB incl_files ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/src/*.h)
    SET(SOURCE_GROUPCONSTRAINT_FILES         ${SOURCE_GROUPCONSTRAINT_FILES}         ${src_files})   #append
    SET(SOURCE_GROUPCONSTRAINT_INCLUDE_FILES ${SOURCE_GROUPCONSTRAINT_INCLUDE_FILES} ${incl_files})

    ## Make sure we find these locally before looking in OpenMM/include if
    ## OpenMM was previously installed there.
    INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/include)
ENDFOREACH(subdir)

# ----------------------------------------------------------------------------

INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/src)

ADD_LIBRARY(${SHARED_GROUPCONSTRAINT_TARGET} SHARED ${SOURCE_GROUPCONSTRAINT_FILES} ${SOURCE_GROUPCONSTRAINT_INCLUDE_FILES} ${API_GROUPCONSTRAINT_ABS_INCLUDE_FILES})
SET_TARGET_PROPERTIES(${SHARED_GROUPCONSTRAINT_TARGET} PROPERTIES LINK_FLAGS "${EXTRA_COMPILE_FLAGS}" COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS} -DOPENMM_GROUPCONSTRAINT_BUILDING_SHARED_LIBRARY -DLEPTON_BUILDING_SHARED_LIBRARY")

FILE(GLOB serialization_files  ${CMAKE_CUURENT_SOURCE_DIR}/serialization/src/*.cpp)
SET_SOURCE_FILES_PROPERTIES(${serialization_files} PROPERTIES COMPILE_FLAGS "-DOPENMM_GROUPCONSTRAINT_BUILDING_SHARED_LIBRARY -DTIXML_USE_STL")

IF(OPENMM_BUILD_STATIC_LIB)
  ADD_LIBRARY(${STATIC_GROUPCONSTRAINT_TARGET} STATIC ${SOURCE_GROUPCONSTRAINT_FILES} ${SOURCE_GROUPCONSTRAINT_INCLUDE_FILES} ${API_GROUPCONSTRAINT_ABS_INCLUDE_FILES})
  SET_TARGET_PROPERTIES(${STATIC_GROUPCONSTRAINT_TARGET} PROPERTIES LINK_FLAGS "${EXTRA_COMPILE_FLAGS}" COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS} -DOPENMM_GROUPCONSTRAINT_BUILDING_STATIC_LIBRARY -DOPENMM_USE_STATIC_LIBRARIES -DOPENMM_BUILDING_STATIC_LIBRARY -DLEPTON_USE_STATIC_LIBRARIES -DLEPTON_BUILDING_STATIC_LIBRARY")
ENDIF(OPENMM_BUILD_STATIC_LIB)

# ----------------------------------------------------------------------------

# On Linux need to link to libdl
FIND_LIBRARY(DL_LIBRARY dl)
IF(DL_LIBRARY)
  TARGET_LINK_LIBRARIES(${SHARED_GROUPCONSTRAINT_TARGET} ${DL_LIBRARY})
  IF( CREATE_SERIALIZABLE_OPENMM_GROUPCONSTRAINT )
      TARGET_LINK_LIBRARIES(${SHARED_GROUPCONSTRAINT_SERIALIZABLE_TARGET} ${DL_LIBRARY})
  ENDIF( CREATE_SERIALIZABLE_OPENMM_GROUPCONSTRAINT )
  IF(OPENMM_BUILD_STATIC_LIB)
    TARGET_LINK_LIBRARIES(${STATIC_GROUPCONSTRAINT_TARGET} ${DL_LIBRARY})
  ENDIF(OPENMM_BUILD_STATIC_LIB)
ENDIF(DL_LIBRARY)

SET( OpenMMLib OpenMM )
# But on Unix or Cygwin we have to add the suffix manually
IF (UNIX AND CMAKE_BUILD_TYPE MATCHES Debug)
    SET(OpenMMLib ${OpenMMLib}_d)
ENDIF (UNIX AND CMAKE_BUILD_TYPE MATCHES Debug)

TARGET_LINK_LIBRARIES( ${SHARED_GROUPCONSTRAINT_TARGET} ${SHARED_TARGET} )
IF(OPENMM_BUILD_STATIC_LIB)
    TARGET_LINK_LIBRARIES( ${STATIC_GROUPCONSTRAINT_TARGET} ${STATIC_TARGET} )
ENDIF(OPENMM_BUILD_STATIC_LIB)

# Which hardware platforms to build

ADD_SUBDIRECTORY(platforms/reference)

#IF(OPENCL_FOUND)
#    SET(OPENMM_BUILD_GROUPCONSTRAINT_OPENCL_LIB ON CACHE BOOL "Build GroupConstraint implementation for OpenCL")
#ELSE(OPENCL_FOUND)
SET(OPENMM_BUILD_GROUPCONSTRAINT_OPENCL_LIB OFF CACHE BOOL "Build GroupConstraint implementation for OpenCL")
#ENDIF(OPENCL_FOUND)
IF(OPENMM_BUILD_GROUPCONSTRAINT_OPENCL_LIB)
    ADD_SUBDIRECTORY(platforms/opencl)
ENDIF(OPENMM_BUILD_GROUPCONSTRAINT_OPENCL_LIB)

IF(CUDA_FOUND)
    SET(OPENMM_BUILD_GROUPCONSTRAINT_CUDA_LIB ON CACHE BOOL "Build GroupConstraint implementation for CUDA")
ELSE(CUDA_FOUND)
    SET(OPENMM_BUILD_GROUPCONSTRAINT_CUDA_LIB OFF CACHE BOOL "Build GroupConstraint implementation for CUDA")
ENDIF(CUDA_FOUND)
IF(OPENMM_BUILD_GROUPCONSTRAINT_CUDA_LIB)
    ADD_SUBDIRECTORY(platforms/cuda)
ENDIF(OPENMM_BUILD_GROUPCONSTRAINT_CUDA_LIB)

INSTALL_TARGETS(/lib RUNTIME_DIRECTORY /lib ${SHARED_GROUPCONSTRAINT_TARGET})
IF(OPENMM_BUILD_STATIC_LIB)
  INSTALL_TARGETS(/lib RUNTIME_DIRECTORY /lib ${STATIC_GROUPCONSTRAINT_TARGET})
ENDIF(OPENMM_BUILD_STATIC_LIB)
FILE(GLOB CORE_HEADERS     include/*.h          */include/*.h)
FILE(GLOB TOP_HEADERS      include/openmm/*.h          */include/openmm/*.h)
FILE(GLOB INTERNAL_HEADERS include/openmm/internal/*.h */include/openmm/internal/*.h )
INSTALL_FILES(/include                 FILES ${CORE_HEADERS})
INSTALL_FILES(/include/openmm          FILES ${TOP_HEADERS})
INSTALL_FILES(/include/openmm/internal FILES ${INTERNAL_HEADERS})

#
# Testing
#

ENABLE_TESTING()

IF (EXECUTABLE_OUTPUT_PATH)
  SET (TEST_PATH ${EXECUTABLE_OUTPUT_PATH})
ELSE (EXECUTABLE_OUTPUT_PATH)
  SET (TEST_PATH .)
ENDIF (EXECUTABLE_OUTPUT_PATH)

#INCLUDE(ApiDoxygen.cmake)

